# ImageProcess-CV

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  image.cbp
inc/: Common.h
src/adapt/: Functor.h  GPUDevice.h
src/alloc/: Alloc.h
src/codec/: BMPDec.h  BMPDecoder.h  BMPEnc.h  BMPEncoder.h  DecoderBase.h  TIFFDecoder.h
src/image/: Color.h  Common.h  Convert.h  Convolve.h  Gaussian.h  Image.cpp  Image.h  Pixel.h  Pixel.h.old  Precision.h  Pyramid.h  Resizer.h  Storage.h
src/stream/: FileInStream.h  FileOutStream.h
src/test/: Image.cpp
test/: BMPCodec.cpp  BMPDecode.cpp  TIFFDecode.cpp  TestBase.cpp  TestBase.h  TestMain.cpp
